# BasicCalc

./: pyproject.toml
src/: main.py
tests/: test_calculator.py
